# oboe-examples

./: .gitignore  README.md
DrumPad/: build.gradle
DrumPad/src/main/cpp/: CMakeLists.txt
DrumPad/src/main/cpp/player/: SampleBuffer.cpp  SimpleMultiPlayer.cpp
DrumPad/src/main/cpp/resampler/: ResamplerDefinitions.h
InoutLoop/: build.gradle
InoutLoop/src/main/: AndroidManifest.xml
InoutLoop/src/main/cpp/: CMakeLists.txt  FullDuplexPass.h  FullDuplexStream.cpp  FullDuplexStream.h  LiveEffectEngine.cpp  LiveEffectEngine.h  jni_bridge.cpp
InoutLoop/src/main/java/com/google/oboe/samples/audio_device/: AudioDeviceAdapter.java  AudioDeviceSpinner.java
InoutLoop/src/main/java/com/google/oboe/samples/liveEffect/: MainActivity.java
InoutLoop/src/main/res/layout/: activity_main.xml
InoutLoop/src/main/res/values/: dimens.xml  strings.xml
MultiSynth/: build.gradle
MultiSynth/src/main/cpp/: CMakeLists.txt
MultiSynth/src/main/res/values/: strings.xml
RhythmGame/: CMakeLists.txt  build.gradle
RhythmGame/src/main/cpp/: Game.cpp
RhythmGame/src/main/cpp/audio/: AAssetDataSource.cpp  FFMpegExtractor.cpp  FFMpegExtractor.h  Player.cpp  Player.h
RhythmGame/src/main/cpp/utils/: logging.h
RhythmGame/src/main/res/values/: strings.xml
SinePlayer/: build.gradle
SinePlayer/src/main/cpp/: CMakeLists.txt
SinePlayer/src/main/java/com/google/oboe/samples/audio_device/: AudioDeviceAdapter.java  AudioDeviceSpinner.java
SinePlayer/src/main/res/values/: dimens.xml  strings.xml
StreamStarter/: build.gradle
StreamStarter/src/main/cpp/: CMakeLists.txt
StreamStarter/src/main/res/values/: strings.xml
SynthPad/: build.gradle
SynthPad/src/main/cpp/: CMakeLists.txt  Synth.h
SynthPad/src/main/kotlin/com/google/oboe/samples/soundboard/: MusicTileView.kt
SynthPad/src/main/res/values/: strings.xml
